<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dialogs.DialogResult">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_total_question_Dialog_Result"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/total_question"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_corrected_answers_Result"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/correct_answers"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintEnd_toEndOf="@+id/mtv_total_question_Dialog_Result"
        app:layout_constraintStart_toStartOf="@+id/mtv_total_question_Dialog_Result"
        app:layout_constraintTop_toBottomOf="@+id/mtv_total_question_Dialog_Result" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_score_percentage_Result"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/score_percentage"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintEnd_toEndOf="@+id/mtv_total_question_Dialog_Result"
        app:layout_constraintStart_toStartOf="@+id/mtv_total_question_Dialog_Result"
        app:layout_constraintTop_toBottomOf="@+id/mtv_corrected_answers_Result" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_note_percentage_Result"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/quiz_note"
        android:textColor="@color/red"
        android:visibility="gone"
        tools:visibility="visible"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintEnd_toEndOf="@+id/mtv_total_question_Dialog_Result"
        app:layout_constraintStart_toStartOf="@+id/mtv_total_question_Dialog_Result"
        app:layout_constraintTop_toBottomOf="@+id/mtv_score_percentage_Result" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_replay_Dialog_Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/replay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtv_note_percentage_Result" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/previewBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="Preview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mb_exit_Dialog_Result"
        app:layout_constraintStart_toEndOf="@+id/mb_replay_Dialog_Result"
        app:layout_constraintTop_toBottomOf="@+id/mtv_note_percentage_Result" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_exit_Dialog_Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtv_note_percentage_Result" />

    <include
        android:id="@+id/inc_voice"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="300dp"
        layout="@layout/view_voice" />

</androidx.constraintlayout.widget.ConstraintLayout>