<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/ifv_icon_List_Item_Quiz_General"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:roundPercent="1"
            app:srcCompat="@color/black" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtv_quiz_type_List_Item_User_General"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/quiz_type"
            app:layout_constraintBottom_toTopOf="@+id/mtv_correct_answer_List_Item_User_General"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ifv_icon_List_Item_Quiz_General"
            app:layout_constraintTop_toTopOf="@+id/ifv_icon_List_Item_Quiz_General" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtv_correct_answer_List_Item_User_General"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/correct_answers"
            app:layout_constraintBottom_toTopOf="@+id/mtv_number_of_question_List_Item_User_General"
            app:layout_constraintEnd_toEndOf="@+id/mtv_quiz_type_List_Item_User_General"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/mtv_quiz_type_List_Item_User_General"
            app:layout_constraintTop_toBottomOf="@+id/mtv_quiz_type_List_Item_User_General" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtv_number_of_question_List_Item_User_General"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/total_question"
            app:layout_constraintBottom_toTopOf="@+id/mtv_percentage_List_Item_User_General"
            app:layout_constraintEnd_toEndOf="@+id/mtv_quiz_type_List_Item_User_General"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/mtv_quiz_type_List_Item_User_General"
            app:layout_constraintTop_toBottomOf="@+id/mtv_correct_answer_List_Item_User_General" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtv_percentage_List_Item_User_General"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/score_percentage"
            app:layout_constraintBottom_toBottomOf="@+id/ifv_icon_List_Item_Quiz_General"
            app:layout_constraintEnd_toEndOf="@+id/mtv_correct_answer_List_Item_User_General"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/mtv_correct_answer_List_Item_User_General"
            app:layout_constraintTop_toBottomOf="@+id/mtv_number_of_question_List_Item_User_General" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtv_date_List_Item_User"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/app_name"
            android:textColor="@color/primary_500"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/mtv_quiz_type_List_Item_User_General"
            app:layout_constraintStart_toStartOf="@+id/ifv_icon_List_Item_Quiz_General"
            app:layout_constraintTop_toBottomOf="@+id/mtv_percentage_List_Item_User_General" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>