<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg_authentication"
    tools:context=".ui.activities.authentication.SignUp">

    <com.google.android.material.card.MaterialCardView
        style="@style/CustomMaterialCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_title_SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                android:textColor="@color/primary_500"
                app:fontFamily="@font/acme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lt_full_name_SignUp"
                style="@style/CustomTextInputField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mtv_title_SignUp"
                app:layout_constraintWidth_percent="0.9"
                app:startIconDrawable="@drawable/ic_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_full_name_SignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fullName"
                    android:inputType="textCapWords|textNoSuggestions" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lt_email_SignUp"
                style="@style/CustomTextInputField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lt_full_name_SignUp"
                app:layout_constraintWidth_percent="0.9"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email_SignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/email_address" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lt_password_SignUp"
                style="@style/CustomTextInputField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:helperText="@string/password_hint"
                app:layout_constraintEnd_toEndOf="@+id/lt_email_SignUp"
                app:layout_constraintStart_toStartOf="@+id/lt_email_SignUp"
                app:layout_constraintTop_toBottomOf="@+id/lt_email_SignUp"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password_SignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword|textNoSuggestions" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lt_confirm_password_SignUp"
                style="@style/CustomTextInputField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:helperText="@string/password_hint"
                app:layout_constraintEnd_toEndOf="@+id/lt_email_SignUp"
                app:layout_constraintStart_toStartOf="@+id/lt_email_SignUp"
                app:layout_constraintTop_toBottomOf="@+id/lt_password_SignUp"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_confirm_password_SignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lt_age_SignUp"
                style="@style/CustomTextInputField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:helperText="e.g. 18"
                app:layout_constraintEnd_toEndOf="@+id/lt_email_SignUp"
                app:layout_constraintStart_toStartOf="@+id/lt_email_SignUp"
                app:layout_constraintTop_toBottomOf="@+id/lt_confirm_password_SignUp"
                app:startIconDrawable="@drawable/ic_age">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_age_SignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mb_submit_SignUp"
                style="@style/CustomMaterialButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="@+id/lt_password_SignUp"
                app:layout_constraintStart_toStartOf="@+id/lt_password_SignUp"
                app:layout_constraintTop_toBottomOf="@+id/lt_age_SignUp"
                app:layout_constraintWidth_percent="0.8" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_login_SignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:text="Already a user? Log in"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/mb_submit_SignUp"
                app:layout_constraintStart_toStartOf="@+id/mb_submit_SignUp"
                app:layout_constraintTop_toBottomOf="@+id/mb_submit_SignUp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>